# nightshade_internal

./: .clang-tidy  CMakeLists.txt  Cargo.toml  build.sh  load.sh  patch.rs  readme.md  test_lock.rs  unload.sh
docs/: interfaces.md
src/: cheat.rs  ctor.rs  interface.rs  interop.rs  lib.rs  library.rs  main.cpp  sdl.rs
src/gui/: mod.rs
src/hook/: mod.rs  pattern.rs  sdl_hook.rs
src/hooks/: functions.hpp  hooks.cpp  hooks.hpp  sdl.cpp  sdl.hpp  vmt.cpp  vmt.hpp
src/hooks/functions/: draw_model_execute.cpp  poll_event.cpp  swap_window.cpp
src/interface/: engine.rs  mod.rs
src/interfaces/: client.hpp  convar.hpp  engine.hpp  entity_list.hpp  interfaces.cpp  interfaces.hpp  material_system.hpp  model_render.hpp  virtual_method.hpp
src/menu/: menu.cpp  menu.hpp
src/sdk/: base_entity.hpp  base_handle.hpp  c_base_entity.hpp  c_base_handle.hpp  c_utl_memory.hpp  c_utl_vector.hpp  convar.hpp  math.cpp  math.hpp  utl_memory.hpp  utl_vector.hpp
src/util/: log.cpp  log.hpp
